[package]
name = "skillMatchingEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
once_cell = "1.20"
anyhow = "1.0"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
zip = "0.6"

